tests/compile_fail/message_trait/engine/quit.rs
fn a(_: impl ruci::engine::traits::Message) {}
fn b(m: ruci::Quit) {
    a(m);
}

fn main() {}